# real_simple_stats

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  ADVANCED_FEATURES_SUMMARY.md  CHANGELOG.md  CI_SETUP_CHECKLIST.md  CODE_QUALITY_REPORT.md  COMPREHENSIVE_REFACTORING_APPLIED.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.md  GITHUB_ACTIONS_SETUP.md  GITHUB_ACTIONS_SUMMARY.md  MONTE_CARLO_GUIDE.md  MONTE_CARLO_INTEGRATION_SUMMARY.md  Makefile  PERFORMANCE_IMPROVEMENTS_SUMMARY.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PHASE_2_COMPLETE.md  PYTHONIC_REFACTORING_PLAN.md  PYTHONIC_REFACTORING_STATUS.md  QUICK_REFERENCE.md  README.md  READTHEDOCS_SETUP.md  READTHEDOCS_SUMMARY.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  RELEASE_NOTES_v0.3.0.md  RUST_INTEGRATION_ANALYSIS.md  TEST_COVERAGE_REPORT.md  apply_pythonic_refactoring.py  benchmark_performance.py  changelog.html  cli_reference.html  code_quality.html  contributing.html  diagnosis.md  (+9 more)
.github/workflows/: ci.yml  docs.yml  publish.yml
_modules/: index.html
_modules/real_simple_stats/: descriptive_statistics.html
_sources/: quickstart.rst.txt  tutorials.rst.txt
_sources/api/: descriptive_statistics.rst.txt
api/: descriptive_statistics.html
app/: start.sh
app/backend/: main.py  registry.py  schemas.py  serializers.py
app/backend/routers/: meta.py  plots.py  tests.py
app/frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
app/frontend/src/: App.tsx
app/frontend/src/components/: DecisionTree.tsx  ParamForm.tsx  PlotViewer.tsx  ResultCard.tsx  Sidebar.tsx  TestPicker.tsx
app/frontend/src/stores/: useAppStore.ts
app/frontend/src/types/: index.ts
app/frontend/src/views/: HomeView.tsx  RunView.tsx
benchmarks/: performance_comparison.py
docs/: API_COMPARISON.md  CAUSAL_INFERENCE_GUIDE.md  DOCUMENTATION_IMPROVEMENTS_SUMMARY.md  FAQ.md  INTERACTIVE_EXAMPLES.md  MATHEMATICAL_FORMULAS.md  MIGRATION_GUIDE.md  SELF_EXPLAINING_RESULTS.md  SPATIAL_STATS_GUIDE.md  SURVIVAL_ANALYSIS_GUIDE.md  WHAT_CAN_STATISTICS_DO.md  WHICH_TEST.md  requirements.txt
docs/source/: changelog.rst  cli_reference.rst  code_quality.rst  conf.py  contributing.rst  index.rst  installation.rst  modules.rst  quickstart.rst  tutorials.rst
docs/source/api/: descriptive_statistics.rst
docs/source/guides/: FAQ.md  INTERACTIVE_EXAMPLES.md  MATHEMATICAL_FORMULAS.md  MIGRATION_GUIDE.md  TROUBLESHOOTING.md  api_comparison.rst  interactive_examples.rst  mathematical_formulas.rst  migration_guide.rst  troubleshooting.rst
examples/: MANIFEST.in  assumptions_demo.py  binomial_distribution_demo.py  causal_inference_demo.py  chi_squared_demo.py  descriptive_statistics_demo.py  effect_sizes_demo.py  explained_t_test_demo.py  getting_started.ipynb  glossary_demo.py  hypothesis_testing_demo.py  linear_regression_demo.py  market_basket_demo.py  monte_carlo_demo.py  multivariate_demo.py  normal_distributions_demo.py  plotsmith_demo.py  power_analysis_demo.py  probability_distributions_demo.py  probability_utils_demo.py  resampling_demo.py  sampling_and_intervals_demo.py  survival_demo.py  time_series_demo.py
examples/data/: README.md  froggy.csv
examples/recipes/: __init__.py  compare_two_groups.py  exploratory_analysis.py  frog_jump_analysis.py  frog_pro_vs_other.py  hypothesis_testing_workflow.py  power_analysis_planning.py  regression_analysis.py  verbose_and_assumptions_demo.py
real_simple_stats/: __init__.py  assumptions.py  bayesian_stats.py  binomial_distributions.py  causal_inference.py  chi_square_utils.py  cli.py  descriptive_statistics.py  descriptive_statistics.pyi  effect_sizes.py  explain.py  glossary.py  hypothesis_testing.py  hypothesis_testing.pyi  linear_regression_utils.py  linear_regression_utils.pyi  market_basket.py  monte_carlo.py  multivariate.py  normal_distributions.py  pandas_compat.py  plots.py  power_analysis.py  power_analysis.pyi  power_analysis_backup.py  pre_statistics.py  probability_distributions.py  probability_utils.py  resampling.py  sampling_and_intervals.py  spatial_stats.py  survival.py  time_series.py  verbose_stats.py
real_simple_stats.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: pre-push.sh
tests/: test_bayesian.py  test_binomial_distributions.py  test_causal_inference.py  test_chi_square.py  test_cli.py  test_descriptive_statistics.py  test_effect_sizes.py  test_explain.py  test_explained_functions.py  test_hypothesis_testing.py  test_hypothesis_testing_additions.py  test_linear_regression.py  test_market_basket.py  test_monte_carlo.py  test_multivariate.py  test_normal_distributions.py  test_plots.py  test_power_analysis.py  test_pre_statistics.py  test_probability_distributions.py  test_probability_utils.py  test_resampling.py  test_sampling_and_intervals.py  test_spatial_stats.py  test_survival.py  test_time_series.py  test_time_series_additions.py
